Minor cosmetic changes

--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -32,24 +32,24 @@
                             <div class="variable-holder">
                                 <label for="hexokinase">Hexokinase</label>
                                 <div class="inner-flex-horiz">
-                                    <input type="range" min="0" max="10" value="5" class="variables" id="enzyme1">
-                                    <h4 id="enzyme1value">5</h4>
+                                    <input type="range" min="0" max="100" value="50" step="10" class="variables" id="enzyme1">
+                                    <h4 id="enzyme1value">50</h4>
                                 </div>
                             </div>
                             <div class="variable-holder">
                                 <label for="enzyme2">Phosphofructokinase</label>
                                 <div class="inner-flex-horiz">
-                                    <input type="range" min="0" max="10" value="5" class="variables" id="enzyme2">
-                                    <h4 id="enzyme2value">5</h4>
+                                    <input type="range" min="0" max="100" value="50" step="10" class="variables" id="enzyme2">
+                                    <h4 id="enzyme2value">50</h4>
                                 </div>
                             </div>
-                            <div class="variable-holder">
+                            <!-- <div class="variable-holder">
                                 <label for="enzyme3">Enzyme3</label>
                                 <div class="inner-flex-horiz">
                                     <input type="range" min="0" max="10" value="5" class="variables" id="enzyme3">
                                     <h4 id="enzyme3value">5</h4>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     </div>
