--- a/testApp/templates/modelChoice.html
+++ b/testApp/templates/modelChoice.html
@@ -34,35 +34,30 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 			<div class="wrap-login100">
-				
-
 					<div class="container-login100-form-btn">
-							<button class="login100-form-btn">
-								Glycolysis
-							</button>
+						<div class="login-flex">
+							<h2 class="title-model">Choose a Model</h2>
+							<a href="modelEdit">
+								<button class="login100-form-btn" type="button">
+									Glycolysis
+								</button>
+							</a>
 					
-							<button class="login100-form-btn">
-								Neoglucogenesis
+							<button class="login100-form-btn" type="button">
+								Gluconeogenesis
 							</button>
 					
 							<button class="login100-form-btn">
 								+
 							</button>
+						</div>
 					</div>
-
-					
-
-					</div>
-				</form>
 			</div>
 		</div>
 	</div>
 
-
-	<div id="dropDownSelect1"></div>
-
 <!--===============================================================================================-->
-<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+	<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
 <!--===============================================================================================-->
 	<script src="{% static 'vendor/animsition/js/animsition.min.js' %}"></script>
 <!--===============================================================================================-->
