--- a/testApp/static/css/moduleEdit.css
+++ b/testApp/static/css/moduleEdit.css
@@ -153,7 +153,20 @@ ul#substrates{
     margin-top: 2%;
 }
 
-.createReaction, .saveReaction{
+.clearReaction {
+  border: 1px solid white;
+  background-color: #4CAF50; /* Green */
+    color: white;
+    padding: 2% 2% 2% 2%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-right: 2%;
+    margin-top: 2%;
+}
+
+.createReaction, .saveReaction, .clearReaction{
   float: left;
   display: inline-block;
 }
