--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -179,7 +179,7 @@
 												</div>
 												<button type="button" class="createReaction" id="createReaction">CREATE</button>
 												<button type="button" class="saveReaction" id="saveReaction">SAVE</button>
-												<button type="button" class="clearReaction" id="clearReaction">SAVE</button>
+												<button type="button" class="clearReaction" id="clearReaction">CLEAR</button>
 
 												</label>
 												<label class="reversibleChoice">Reversible
