Implementing sign-up capabilities

--- a/testApp/templates/registration/register.html
+++ b/testApp/templates/registration/register.html
@@ -36,6 +36,8 @@
 			<div class="wrap-login100">
 				<img src="{% static 'images/logo.png' %}" alt="biopath_logo goes here" class="wrap-biopath-logo">
 
+				{% block content %}
+				{% endblock %}
 				<form class="login100-form">
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter email">
