--- a/testApp/templates/modelChoice.html
+++ b/testApp/templates/modelChoice.html
@@ -71,7 +71,7 @@
 <!--===============================================================================================-->
 	<script src="{% static 'vendor/countdowntime/countdowntime.js' %}"></script>
 <!--===============================================================================================-->
-	<script src="{% static 'js/main.js' %}"></script>
+	<script src="{% static 'js/modelChoice.js' %}"></script>
 
 </body>
 </html>
