adding form tag to html

--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -178,7 +178,10 @@
 										    	</ul>
 												</div>
 												<button type="button" class="createReaction" id="createReaction">CREATE</button>
-												<button type="button" class="saveReaction" id="saveReaction">SAVE</button>
+												<form method="POST" class="saveModuleForm">{% csrf_token %}
+													{{ form.as_p }}
+													<button type="button" class="saveReaction" id="saveReaction">SAVE</button>
+												</form>
 												<button type="button" class="clearReaction" id="clearReaction">CLEAR</button>
 
 												</label>
