--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -180,6 +180,7 @@
 												<button type="button" class="createReaction" id="createReaction">CREATE</button>
 												<form method="POST" class="saveModuleForm">
 													{% csrf_token %}
+													{{form}}
 													<button type="button" class="saveReaction" id="saveReaction">SAVE</button>
 												</form>
 												<button type="button" class="clearReaction" id="clearReaction">CLEAR</button>
