--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -36,7 +36,7 @@
 										</div>
 										<div class="viewAndCreateReaction">
 												<canvas id="imageCanvas" height="500" width="825"></canvas>
-										<form method="POST" class="saveModuleForm" action="/saveModule">{% csrf_token %}
+										<form method="post" class="saveModuleForm" action="/saveModule">{% csrf_token %}
 												<div id="subsContainer">
 													<label id="subsLabel">SUBSTRATES</label>
 											    <ul class="subs" id="substrates">
@@ -178,8 +178,6 @@
 														</label>
 										    	</ul>
 												</div>
-												<button type="button" class="saveReaction" id="saveReaction">SAVE</button>
-												</label>
 												<label class="reversibleChoice">Reversible
 													<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Reversible">
 													<span class="checkmark"></span>
@@ -188,6 +186,7 @@
 													<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Irreversible" checked>
 													<span class="checkmark"></span>
 												</label>
+												<button type="submit" class="saveReaction" id="saveReaction">SAVE</button>
 											</form>
 												<button type="button" class="createReaction" id="createReaction">CREATE</button>
 												<button type="button" class="clearReaction" id="clearReaction">CLEAR</button>
