--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -36,7 +36,7 @@
 										</div>
 										<div class="viewAndCreateReaction">
 												<canvas id="imageCanvas" height="500" width="825"></canvas>
-										<form method="post" class="saveModuleForm" action="/saveModule">{% csrf_token %}
+										<form method="post" class="saveModuleForm" action="#">{% csrf_token %}
 												<div id="subsContainer">
 													<label id="subsLabel">SUBSTRATES</label>
 											    <ul class="subs" id="substrates">
