post request changes

--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -33,7 +33,7 @@
                         <a href="{% url 'moduleEdit' %}" id="link-to-module">
                             <canvas id="modelEditCanvas" height="800" width="800"></canvas>
                         </a>
-                        <div class="flex-sliders">
+                        <div class="flex-sliders" id="slider-holder">
                             <h3 style="padding:10px 20px">Variables</h3>
                             <div class="variable-holder">
                                 <label for="hexokinase">Hexokinase</label>
