--- a/testApp/templates/register.html
+++ b/testApp/templates/register.html
@@ -34,30 +34,48 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 			<div class="wrap-login100">
-					<div class="container-login100-form-btn">
-						<div class="login-flex">
-							<h2 class="title-model">Choose a Model</h2>
-							<a href="modelEdit">
-								<button class="login100-form-btn" type="button">
-									Glycolysis
-								</button>
-							</a>
-					
-							<button class="login100-form-btn" type="button">
-								Gluconeogenesis
-							</button>
-					
-							<button class="login100-form-btn">
-								+
-							</button>
-						</div>
+				<img src="{% static 'images/logo.png' %}" alt="biopath_logo goes here" class="wrap-biopath-logo">
+
+				<form class="login100-form">
+
+					<div class="wrap-input100 validate-input" data-validate = "Enter email">
+						<input class="input100" type="email" name="email" placeholder="email">
+						<span class="focus-input100" data-placeholder="&#xf207;"></span>
 					</div>
+
+					<div class="wrap-input100 validate-input" data-validate="Enter password">
+						<input class="input100" type="password" name="pass" placeholder="Password">
+						<span class="focus-input100" data-placeholder="&#xf191;"></span>
+					</div>
+					<div class="wrap-input100 validate-input" data-validate="Enter password">
+						<input class="input100" type="password" name="pass" placeholder="Confirm Password">
+						<span class="focus-input100" data-placeholder="&#xf191;"></span>
+					</div>
+
+					<div class="contact100-form-checkbox">
+						<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+						<label class="label-checkbox100" for="ckb1">
+							By clicking this box you agree to our Privacy Policy and Terms of Service
+						</label>
+					</div>
+
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn">
+							Create Account
+						</button>
+					</div>
+
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
 
+
+	<div id="dropDownSelect1"></div>
+
 <!--===============================================================================================-->
-	<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
 <!--===============================================================================================-->
 	<script src="{% static 'vendor/animsition/js/animsition.min.js' %}"></script>
 <!--===============================================================================================-->
