--- a/testApp/templates/modelChoice.html
+++ b/testApp/templates/modelChoice.html
@@ -35,7 +35,7 @@
 		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 			<div class="wrap-login100">
 					<div class="container-login100-form-btn">
-						<div class="login-flex">
+						<div class="login-flex" id="main">
 							<h2 class="title-model">Choose a Model</h2>
 							<a href="modelEdit">
 								<button class="login100-form-btn" type="button">
@@ -45,7 +45,7 @@
 							<button class="login100-form-btn" type="button">
 								Gluconeogenesis
 							</button>
-					
+
 							<button class="login100-form-btn">
 								+
 							</button>
