--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -139,6 +139,39 @@ iframe {
 	border: none !important;
 }
 
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #315565;
+  overflow: hidden;
+}
+
+#topnav-buttons {
+  float: right;
+  height: 36px;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #EEEEEE;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #21394A;
+  color: white;
+}
+
 
 /*//////////////////////////////////////////////////////////////////
 [ Utility ]*/
@@ -149,7 +182,28 @@ iframe {
   color: #e5e5e5;
   line-height: 1.5;
 }
+/*//////////////////////////////////////////////////////////////////
+[ Sign up Button ]*/
 
+.sign-up-button {
+  margin-left: 85px;
+  margin-top: 25px;
+  background-color: whitesmoke; 
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+
+}
+/*---------------------------------------------*/ 
+/*sign-up*/ 
+.sign-up-spacing {
+  margin-top: 10px;
+
+}
 
 /*//////////////////////////////////////////////////////////////////
 [ login ]*/
@@ -194,11 +248,65 @@ iframe {
 .wrap-login100 {
   display: inline-flex;
   flex-direction: column;
-  width: 450px;
-  height: 600px;
+  width: 400px;
+  height: 500px;
   border-radius: 10px;
   overflow: hidden;
-  padding: 55px 55px 37px 55px;
+  padding: 40px 55px 37px 55px;
+
+  background: white;
+  background: -webkit-linear-gradient(top, #19384A, #347787);
+  background: -o-linear-gradient(top, #19384A, #347787);
+  background: -moz-linear-gradient(top, #19384A, #347787);
+  background: linear-gradient(top, #19384A, #347787);
+}
+
+.wrap-modelChoice100 {
+  display: inline-flex;
+  flex-direction: column;
+  width: 400px;
+  height: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 40px 20px 37px 20px;
+
+  background: white;
+  background: -webkit-linear-gradient(top, #19384A, #347787);
+  background: -o-linear-gradient(top, #19384A, #347787);
+  background: -moz-linear-gradient(top, #19384A, #347787);
+  background: linear-gradient(top, #19384A, #347787);
+}
+
+.modelChoice-scroll-elements {
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: scroll;
+  width: 100%;
+  
+  
+
+}
+
+.modelChoice-spacing {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: inline-flex;
+  align-items: center;
+
+}
+
+.wrap-signup100 {
+  display: inline-flex;
+  flex-direction: column;
+  width: 400px;
+  height: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 25px 55px 37px 55px;
 
   background: white;
   background: -webkit-linear-gradient(top, #19384A, #347787);
@@ -212,7 +320,16 @@ label {
 }
 
 .login-flex {
-  margin-top: 80px;
+  margin-top: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 100%;
+  align-items: center;
+}
+
+.modelChoice-flex {
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -239,7 +356,7 @@ label {
 }
 
 .wrap-biopath-logo {
-  font-size: 60px; 
+  font-size: 60px;
   color: #333333;
 
   display: -webkit-box;
@@ -253,7 +370,33 @@ label {
   height: 180px;
   border-radius: 25px;
   background-color: #fff;
-  margin: -20px 0px -15px 80px;
+  margin: -20px 0px -15px 55px;
+}
+
+.web-title{
+  color: #EEEEEE;
+  font-size: 33px;
+  float: left;
+  font-family: 'Courier', Courier, monospace;
+  font-weight: 500;
+  margin-left: 1%;
+  
+  
+}
+.wrap-biopath-logo-top-bar {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: left;
+  width: 50px;
+  height: 50px;
+  border-radius: 3px;
+  margin-left: 18%;
+  margin-top: 3px;
 }
 
 
@@ -312,6 +455,8 @@ label {
   margin-top: 30px;
 
 }
+
+
 
 /*---------------------------------------------*/ 
 .focus-input100 {
@@ -457,6 +602,14 @@ label {
   justify-content: center;
 }
 
+.container-modelChoice {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  
+}
+
 .login100-form-btn {
   font-family: Poppins-Medium;
   font-size: 16px;
@@ -526,6 +679,12 @@ label {
 
 @media (max-width: 576px) {
   .wrap-login100 {
+    padding: 55px 15px 37px 15px;
+  }
+}
+
+@media (max-width: 576px) {
+  .wrap-modelChoice100 {
     padding: 55px 15px 37px 15px;
   }
 }
