--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -31,18 +31,36 @@
 <body>
 	
 	<div class="limiter">
+		<div class="topnav">
+			<a class="active" href="#home">Home</a>
+			<a href="#news">News</a>
+			<a href="#contact">Contact</a>
+			<a href="#about">About</a>
+			<img src="{% static 'images/logo.png' %}" alt="biopath_logo goes here" class="wrap-biopath-logo-top-bar">
+			<p class="web-title">BioPath</p>
+
+			<a href="/testApp/accounts/login/" id="topnav-buttons" class="login100-form-btn" ><button type="button">
+				Log In
+			</button></a>
+			<a href="/testApp/register" id="topnav-buttons" class="login100-form-btn"><button type="button">
+				Sign Up
+			</button></a>
+		</div>
 		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
-			<div class="wrap-login100">
-				<img src="{% static 'images/logo.png' %}" alt="biopath_logo goes here" class="wrap-biopath-logo">
-				
-				{% block login %}
-				{% endblock %}
-			</div>
+			
+			{% block modelChoice %}
+			{% endblock %}
+
+			{% block login %}
+			{% endblock %}
+
+			{% block signup %}
+			{% endblock %}
+
+		
+
 		</div>
 	</div>
-	
-
-	<div id="dropDownSelect1"></div>
 	
 <!--===============================================================================================-->
 	<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
