--- a/testApp/templates/load.html
+++ b/testApp/templates/load.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% block login %}
+{% block signup-login-buttons %}
 <div class="login-flex" id="login-loadpage-btn>">
     <a href="accounts/login" class="login100-form-btn" ><button type="button">
         Log In
