--- a/testApp/templates/registration/login.html
+++ b/testApp/templates/registration/login.html
@@ -2,6 +2,7 @@
 
 
 {% block login %}
+<div class="wrap-login100">
     <form class="login100-form" method="post">
         {% csrf_token %}
         {{ form.as_p }}
@@ -9,39 +10,5 @@
             <button type="submit" class="login100-form-btn">Login</button>
         </div>
     </form>
-    <!--<a href="{% url 'modelChoice' %}">Model Choice</a>-->
-    <!-- <form class="login100-form" method="post">
-			{% csrf_token %}
-            <div class="wrap-input100 validate-input" data-validate = "Enter username">
-                <input class="input100" type="text" name="username" id="id_username" placeholder="Username" required="">
-                <span class="focus-input100" data-placeholder="&#xf207;"></span>
-            </div>
-
-            <div class="wrap-input100 validate-input" data-validate="Enter password">
-                <input class="input100" type="password" name="pass" id="id_password" placeholder="Password" required="">
-                <span class="focus-input100" data-placeholder="&#xf191;"></span>
-            </div>
-
-            <div class="contact100-form-checkbox">
-                <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                <label class="label-checkbox100" for="ckb1">
-                    Remember me
-                </label>
-            </div>
-            <div class="container-login100-form-btn">
-                <button type="submit" class="login100-form-btn" id="login">
-                    Login
-                </button>
-            </div>
-            <div class="text-center-forgot-password1" >
-                    {% block signup %}
-                    {% endblock %}
-                <a class="txt1" href="#">
-                    Forgot Password?
-                </a>
-                
-            </div> -->
-            <!-- {% block body %}
-            {% endblock %}
-        </form> -->
+</div>
 {% endblock %}
