--- a/testApp/templates/registration/signup.html
+++ b/testApp/templates/registration/signup.html
@@ -1,21 +1,19 @@
-{% extends 'registration/register.html' %}
-
-{% block content %}
-  <h2>Sign up</h2>
+{% extends 'index.html' %}
+ 
+{% block signup %}
+<div class="wrap-login100">
   <form method="post">
     {% csrf_token %}
     {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
+      <p class="sign-up-spacing">
+        {{ field.label_tag }}
         {{ field }}
-        {% if field.help_text %}
-          <small style="color: grey">{{ field.help_text }}</small>
-        {% endif %}
         {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
+        <p style="color: red">{{ error }}</p>
         {% endfor %}
       </p>
     {% endfor %}
-    <button type="submit">Sign up</button>
+    <button type="submit" class="sign-up-button" >Sign up</button>
   </form>
+</div>
 {% endblock %}
