preparing for glycolysis

--- a/testApp/templates/modelChoice.html
+++ b/testApp/templates/modelChoice.html
@@ -69,6 +69,11 @@
 								Steroid hormone biosynthesis
 							</button>
 						</a>
+						<!-- TODO: Add in script to create buttons -->
+						<script>
+							var models = {{ models }};
+							
+						</script>
 					</div>
 			</div>
 		</div>
