--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -11,7 +11,7 @@
 	<script>
 		var myEnzymes = [];
 		{% for mod in modules %}
-				myEnzymes.push({{ mod.enzyme }});
+				myEnzymes.push({{ mod.enzyme }}.toString());
 		{% endfor %}
 		var mySubstrates = [];
 		{% for subs in substrates %}
