--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -11,11 +11,11 @@
 	<script>
 		var myEnzymes = [];
 		{% for mod in modules %}
-				myEnzymes.push({{ mod.enzyme }});
+				myEnzymes.push('{{ mod.enzyme }}');
 		{% endfor %}
 		var mySubstrates = [];
 		{% for subs in substrates %}
-				mySubstrates.push({{subs.substrate}});
+				mySubstrates.push('{{subs.substrate}}');
 		{% endfor %}
 	</script>
 	<div class="limiter">
