--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -11,7 +11,7 @@
 	<script>
 		var myEnzymes = [];
 		{% for mod in modules %}
-				myEnzymes.push(enzyme: '{{ mod.enzyme }}', id: '{{mod.id}}');
+				myEnzymes.push(['{{ mod.enzyme }}', '{{mod.id}}']);
 		{% endfor %}
 		var mySubstrates = [];
 		{% for subs in substrates %}
