--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -11,15 +11,19 @@
 	<script>
 		var myEnzymes = [];
 		{% for mod in modules %}
-				myEnzymes.push(['{{ mod.enzyme }}', '{{mod.id}}']);
+				myEnzymes.push(['{{ mod.enzyme }}', '{{mod.reversible}}' '{{mod.id}}', '{{mod.modelID_id}}']);
 		{% endfor %}
 		var mySubstrates = [];
 		{% for subs in substrates %}
-				mySubstrates.push('{{subs.substrate}}');
+				mySubstrates.push(['{{subs.substrate}}', '{{subs.id}}', '{{subs.moduleID_id}}']);
+		{% endfor %}
+		var myProducts = [];
+		{% for prods in products %}
+				mySubstrates.push(['{{prods.substrate}}', '{{prods.id}}', '{{prods.moduleID_id}}']);
 		{% endfor %}
 	</script>
 	<div class="limiter">
-		{% for mod in modules %}
+		<!-- {% for mod in modules %}
 				{{ mod.id }}
 				{{ mod.modelID_id }}
 				{{ mod.enzyme }}
@@ -30,7 +34,7 @@
 				{{ mod.modelID_id }}
 				{{ mod.enzyme }}
 				{{ mod.reversible }}
-		{% endfor %}
+		{% endfor %} -->
 		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 			<img class="step1Image" id="step1" src="{% static 'images/GlycolysisStep1.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose" src="{% static 'images/Glucose.jpg' %}" style="display: none;">
