--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -229,6 +229,14 @@
 										    <p>You must select at least one substrate, enzyme and product, as well as no more than five products or substrates.</p>
 										  </div>
 										</div>
+										<div id="invalidCheckModal" class="modal">
+
+										  <!-- Modal content -->
+										  <div class="modal-content">
+										    <span class="close">&times;</span>
+										    <p>Sorry! We cannot fill in the reaction for your chosen enzyme at the moment.</p>
+										  </div>
+										</div>
 			</div>
 		</div>
 	</div>
