--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -9,6 +9,9 @@
 <!--===============================================================================================-->
 </head>
 <body>
+    <script>
+        var modList = "{{ Module }}";
+    </script>
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 			<div class="wrap-login100">
@@ -23,12 +26,12 @@
                             <button class="editToolbarButton" id="logout" type="button">Logout</button>
                         </div>
                     </div>
-                    <!-- {% for mod in modules %}
+                    {% for mod in modules %}
                         {{ mod.id }}
                         {{ mod.modelID_id }}
                         {{ mod.enzyme }}
                         {{ mod.reversible }}
-                    {% endfor %} -->
+                    {% endfor %}
                     <div class="flex-horiz">
                         <a href="{% url 'moduleEdit' %}" id="link-to-module">
                             <canvas id="modelEditCanvas" height="800" width="800"></canvas>
