--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -32,11 +32,12 @@
 	
 	<div class="limiter">
 		<div class="topnav">
-			<a class="active" href="#home">Home</a>
-			<a href="#news">News</a>
-			<a href="#contact">Contact</a>
-			<a href="#about">About</a>
-			<img src="{% static 'images/logo.png' %}" class="wrap-biopath-logo-top-bar">
+			<a class="active" href="/testApp/home">
+				<img src="{% static 'images/home-icon-white.png' %}" class="wrap-home-top-bar">
+			</a>
+			<a href="#news">Settings</a>
+			<a href="#contact">Help</a>
+			<img src="{% static 'images/BioPath3.png' %}" class="wrap-biopath-logo-top-bar">
 			<p class="web-title">BioPath</p>
 			<a href="/testApp/accounts/login/" id="topnav-buttons" class="login100-form-btn" ><button type="button">
 				Log In
