--- a/testApp/templates/home.html
+++ b/testApp/templates/home.html
@@ -8,7 +8,12 @@
 
 
     <h1 class="landing-page-text"> Web application for biochemical pathway creation and visualization</h1>
-  
-
+    <div class="landing-page-sub-width">
+      <h2 class="landing-page-text"> BioPath is a tool for learning biochemical pathways. The user can create their own biochemical pathway 
+        with our pathway creation tool in a reaction by reaction process. After the pathway has been built flow is represented by 
+        moving molecules following the reactions in the pathway. The speed of the flow of the molecule can then be modified by
+        changing the enzyme reaction rate.
+      </h2>
+    </div>
   </div>  
 {% endblock %}
