--- a/testApp/templates/registration/signup.html
+++ b/testApp/templates/registration/signup.html
@@ -13,7 +13,7 @@
         {% endfor %}
       </p>
     {% endfor %}
-    <button type="submit" class="sign-up-button" >Sign up</button>
+    <button type="submit" class="login100-form-btn" id="sign-up-button" >Sign up</button>
   </form>
 </div>
 {% endblock %}
