--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -33,7 +33,7 @@
                         {{ mod.reversible }}
                     {% endfor %}
                     <div class="flex-horiz">
-                        <a href="{% url 'moduleEdit' %}" id="link-to-module">
+                        <a href="{% url 'moduleEdit' module=3%}" id="link-to-module">
                             <canvas id="modelEditCanvas" height="800" width="800"></canvas>
                         </a>
                         <div class="flex-sliders" id="slider-holder">
