--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -23,6 +23,10 @@
 		{% for prods in products %}
 				myProducts.push(['{{prods.product}}', '{{prods.id}}', '{{prods.moduleID_id}}']);
 		{% endfor %}
+
+		// var allEnzymes = []
+		// var allProducts = []
+		// var allSubstrates = []
 	</script>
 	<div class="limiter">
 		<!-- {% for mod in modules %}
