--- a/testApp/templates/modelChoice.html
+++ b/testApp/templates/modelChoice.html
@@ -7,7 +7,7 @@
 			<div class="modelChoice-flex">
 				<h2 class="title-model">Create or Continue</h2>
 					<div class="modelChoice-scroll-elements">
-						<a href="modelEdit">
+						<a href="{% url 'modelEdit' model=1 %}">
 							<button class="login100-form-btn">
 								+
 							</button>
