--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -27,7 +27,7 @@
                     {{ substrates|json_script:"db-substrates" }}
                     {{ products|json_script:"db-products" }}
                     <div class="flex-horiz">
-                        <a href="{% url 'moduleEdit' model=1 module=2 %}" id="link-to-module">
+                        <a href="{% url 'moduleEdit' module=0 %}" id="link-to-module">
                             <canvas id="modelEditCanvas" height="800" width="800"></canvas>
                         </a>
                         <div class="flex-sliders" id="slider-holder">
@@ -56,7 +56,12 @@
                         </div>
                     </div>
                     </div>
-				</form>
+                </form>
+                <a href="{% url 'moduleEdit' model=1 module=2 %}">
+                    <button>
+                        Create New Reaction
+                    </button>
+                </a>
 			</div>
 		</div>
 	</div>
