dynamically creating sliders

--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -39,6 +39,7 @@
                         </div>
                         <div class="flex-sliders" id="slider-holder">
                             <h3 style="padding:10px 20px">Variables</h3>
+                            <!-- TODO: Need to create this dynamically -->
                             <div class="variable-holder">
                                 <label for="hexokinase">Hexokinase</label>
                                 <div class="inner-flex-horiz">
