dynamically creating sliders

--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -40,7 +40,7 @@
                         <div class="flex-sliders" id="slider-holder">
                             <h3 style="padding:10px 20px">Variables</h3>
                             <!-- TODO: Need to create this dynamically -->
-                            <div class="variable-holder">
+                            <!-- <div class="variable-holder">
                                 <label for="hexokinase">Hexokinase</label>
                                 <div class="inner-flex-horiz">
                                     <input type="range" min="0" max="100" value="50" step="10" class="variables" id="enzyme1">
@@ -53,7 +53,7 @@
                                     <input type="range" min="0" max="100" value="50" step="10" class="variables" id="enzyme2">
                                     <h4 id="enzyme2value">50</h4>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- <div class="variable-holder">
                                 <label for="enzyme3">Enzyme3</label>
                                 <div class="inner-flex-horiz">
